# minimoi

./: .gitignore  README.md  config.py  main.py  notebook.ipynb  pyproject.toml  trainer_graph
datasets/: dataset.py
graphs/: graph.py
models/: model.py
models/tasks/: task.py
training/: trainer.py
