[project]
name = "minimoi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiddle>=0.3.0",
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
    "pyzmq>=27.1.0",
    "rich>=14.2.0",
    "ty>=0.0.1a29",
]
